instalciond e shipping module

--- a/web/themes/hipertintorero/css/hipertintorero.css
+++ b/web/themes/hipertintorero/css/hipertintorero.css
@@ -310,10 +310,7 @@ li > ol {
   margin-left: 1.5em;
 }
 
-dt {
-  font-weight: bold;
-}
-
+dt {font-weight: bold;}
 dd {
   margin: 0 1.5em 1.5em;
 }
@@ -461,16 +458,16 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
 }
 
 #primary-menu .menu .sub-menu li:hover {
-  background: #72B0D9;
+  background: #72B0D9;  color: #eee;
 }
 
 #primary-menu .menu .sub-menu li:hover a {
-  color: #111;
+  color: #eee;
 }
 
 #primary-menu .menu .sub-menu li a {
   text-transform: capitalize;
-  font-weight: 400;
+  font-weight: 600;
   font-family: Lato;
 }
 
@@ -727,7 +724,6 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
   position: relative;
   font-size: 0;
 }
-
 .social-menu .menu li {
   display: block;
   float: left;
@@ -735,7 +731,6 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
   position: relative;
   width: auto !important;
 }
-
 .social-menu .menu li a {
   font-size: 0;
 }
@@ -764,31 +759,6 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
 .menu li a[href*="plus.google.com"]:before {
   content: "\f0d5";
 }
-
-.menu li a[href*="flickr"]:before {
-  content: "\f16e";
-}
-
-.menu li a[href*="dribbble"]:before {
-  content: "\f17d";
-}
-
-.menu li a[href*="foursquare"]:before {
-  content: "\f180";
-}
-
-.menu li a[href*="linkedin"]:before {
-  content: "\f0e1";
-}
-
-.menu li a[href*="tumblr"]:before {
-  content: "\f173";
-}
-
-.menu li a[href*="feed"]:before {
-  content: "\f09e";
-}
-
 .social-menu_right-arrow .menu:before {
   content: '';
   width: 0;
@@ -1827,8 +1797,7 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
 }
 
 .mini-cart .mini-cart__content .cart-list li {
-  margin-bottom: 10px;
-  padding: 0 15px 10px;
+  margin-bottom: 10px;padding: 0 15px 10px;
   border-bottom: 1px solid #eee;
   list-style: none;
 }
@@ -1850,24 +1819,7 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
   color: #666;
   font-size: 14px;
 }
-
-.mini-cart .mini-cart__content .cart-list li .remove {
-  position: relative;
-  display: inline-block;
-  float: right;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-size: 18px;
-  line-height: 17px;
-}
-
-.mini-cart .mini-cart__content .cart-list li .remove:hover {
-  background: #d90000;
-  color: #fff;
-}
-
-.mini-cart .mini-cart__content .total {
+.mini-cart .order-total-line span {
   margin-bottom: 0;
   padding: 5px 15px 5px;
   text-align: center;
@@ -1918,7 +1870,7 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
   font-family: Montserrat;
   font-size: 13px;
   font-weight: 700;
-  color: #111;
+  color: #eee;
   background: #3969a1;
   padding: 11px 17px;
   display: inline-block;
@@ -1954,7 +1906,7 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
 }
 
 .accordion-rn .panel-heading .panel-title a:hover, .accordion-rn .panel-heading .panel-title a:focus {
-  color: #111;
+  color: #eee;
 }
 
 .accordion-rn .panel-heading .panel-title a:after {
@@ -2032,30 +1984,6 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
 }
 
 /*-----------------------------
-05-04. Breadcrumb
------------------------------*/
-.big-title {
-  background: #111;
-  margin-bottom: 70px;
-}
-
-.big-title h2 {
-  font-size: 36px;
-  font-weight: 700;
-  text-transform: capitalize;
-  color: #fff;
-  padding: 80px 0px;
-}
-
-.page-contact-layout-01 .big-title,
-.page-projects-fullwidth .big-title,
-.page-projects-3columns .big-title,
-.page-projects-basic .big-title,
-.page-projects-sidebar .big-title {
-  margin-bottom: 0;
-}
-
-/*-----------------------------
 05-05. Custom heading
 -----------------------------*/
 .heading-title {
@@ -2098,11 +2026,7 @@ input[type="submit"], .service-item_img img, .service-item_icon, .service-item_i
 .pagination {
   text-align: center;
   display: block;
-  margin: 40px 0px 50px;
-}
-
-.pagination ul {
-  font-size: 0;
+  margin: 15px 0px 50px;
 }
 
 .pagination li {
@@ -4797,7 +4721,21 @@ ins .amount {
   padding: 30px 20px;
   margin: 40px 0px 70px 0px;
 }
+/*-----------------------------
+05-04. Breadcrumb
+-----------------------------*/
+.big-title {
+  background: #a0d0e8;
+  margin-bottom: 70px;
+}
 
+.big-title h1 {
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #fff;
+  padding: 80px 0px;
+}
 /*-----------------------------
 07-05. About
 -----------------------------*/
