--- a/web/themes/hipertintorero/templates/pager.html.twig
+++ b/web/themes/hipertintorero/templates/pager.html.twig
@@ -44,7 +44,7 @@
       {% if items.previous %}
         <li class="pager__item pager__item--previous next">
           <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
-            <span class="visually-hidden">&lt;</span>
+            <i class="fa fa-angle-left"></i>
           </a>
         </li>
       {% endif %}
@@ -76,7 +76,7 @@
       {% if items.next %}
         <li class="pager__item pager__item--next next">
           <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
-            <span class="visually-hidden">&gt;</span>
+            <i class="fa fa-angle-right"></i>
           </a>
         </li>
       {% endif %}
