--- a/web/themes/hipertintorero/templates/views/views-view-unformatted.html.twig
+++ b/web/themes/hipertintorero/templates/views/views-view-unformatted.html.twig
@@ -36,13 +36,12 @@
 </div>
 -->
 <div class="products grid-layout row">
-  <div class="owl-carousel">
 {% for row in rows %}
   {%
     set row_classes = [
       default_row_class ? 'views-row',
     ]
   %}
-    <div>{{- row.content -}}</div>
+    {{- row.content -}}
 {% endfor %}
-</div></div>
+</div>
